--- a/ElMundoAnimal/app/src/main/res/layout/elementos_control_peticiones.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/elementos_control_peticiones.xml
@@ -38,7 +38,7 @@
             <ImageView
                 android:id="@+id/imgFotoAnimal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="@string/descripcion"
                 tools:srcCompat="@tools:sample/avatars" />
