--- a/ElMundoAnimal/app/src/main/res/layout/activity_ficha_animal.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_ficha_animal.xml
@@ -71,9 +71,18 @@
                         android:id="@+id/txtDescripcion"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="3dp"
-                        android:layout_marginEnd="3dp"
-                        android:text="@string/descripcion" />
+                        android:layout_marginStart="6dp"
+                        android:layout_marginEnd="6dp"
+                        android:text="@string/descripcion"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/txtTipo"
+                        android:layout_marginStart="6dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
