--- a/ElMundoAnimal/app/src/main/res/layout/elementos_control_peticiones.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/elementos_control_peticiones.xml
@@ -13,6 +13,7 @@
         android:layout_marginEnd="10dp"
         app:cardBackgroundColor="@color/verdeClaro2"
         app:cardCornerRadius="6dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -29,7 +30,6 @@
                 android:id="@+id/txtNombreAnimal2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:padding="4dp"
                 android:text="@string/nombreCompleto"
                 android:textSize="18sp"
@@ -39,7 +39,6 @@
                 android:id="@+id/imgFotoAnimal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:contentDescription="@string/descripcion"
                 tools:srcCompat="@tools:sample/avatars" />
 
