--- a/ElMundoAnimal/app/src/main/res/layout/elementos_tipos_especie.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/elementos_tipos_especie.xml
@@ -8,12 +8,13 @@
     android:layout_height="wrap_content" >
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardTipos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
-        app:cardBackgroundColor="@color/verdeClaro2"
         android:layout_marginEnd="10dp"
+        app:cardBackgroundColor="@color/verdeClaro2"
         app:cardCornerRadius="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
