--- a/ElMundoAnimal/app/src/main/res/layout/activity_cambiar_contrasenia.xml
+++ b/ElMundoAnimal/app/src/main/res/layout/activity_cambiar_contrasenia.xml
@@ -61,7 +61,7 @@
                 android:layout_height="match_parent"
                 android:background="@color/verdeClaro2"
                 android:text="@string/cambioConstrasenia"
-                android:textAlignment="center" />
+                android:textSize="23sp" />
 
             <com.google.android.material.textfield.TextInputLayout
 
@@ -124,7 +124,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/txtInfoCambiar"
+            android:id="@+id/txtLoginAdmin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/verdeClaro2"
